--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,19 @@ build
 .vscode
 *.bmp
 !images/*
+*.cache
+.deps
+Makefile
+*.log
+*.o
+.dirstamp
+aclocal.m4
+compile
+install-sh
+missing
+depcomp
+Makefile.in
+configure~
+config.status
+margen
+*.tar.gz
