add extra warnings and small fix

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: gcc
-        run: mkdir -p build && gcc -v -Wall -Werror src/*.c src/*.h -lm -o build/out
+        run: mkdir -p build && gcc -v -Wall -Wextra -Werror src/*.c src/*.h -lm -o build/out
 
   build-release:
     needs: lint
