add --version to --help

--- a/Makefile.dev
+++ b/Makefile.dev
@@ -41,7 +41,7 @@ release-arch: clean
 gif: build
 	mkdir -p tmp
 	for i in {1..50}; do \
-		./build/margen -w=1920 -h=720 --seed=$$i$$i -o=tmp/image$$i.bmp ; \
+		./build/$(TARGET) -w=1920 -h=720 --seed=$$i$$i -o=tmp/image$$i.bmp ; \
 	done
 	ffmpeg -y -f image2 -framerate 1 -i tmp/image%d.bmp -vf scale=960x360 images/sample.gif
 	rm -rf tmp
