--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,7 @@ jobs:
     needs: lint
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
       - name: gcc
         run: mkdir -p build && gcc $GCC_ARGS -o build/$TARGET
       - name: $TARGET
