--- a/Makefile.dev
+++ b/Makefile.dev
@@ -9,7 +9,7 @@ clean:
 
 build:
 	@mkdir -p build
-	gcc -v -Wall -Wextra src/*.c src/*.h -lm -o build/$(TARGET)
+	gcc -v -Wall -Wextra src/*.c src/*.h -o build/$(TARGET)
 
 .PHONY: install
 install: build
