use unsigned int for compiler optimization

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
     branches: ["master"]
 
 env:
-  GCC_ARGS: src/*.c src/*.h
+  GCC_ARGS: src/*.c src/*.h -Ofast
   TARGET: margen
   TEST_ARGS: ""
 
